--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
 
-        <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <title>Title</title>
-    <link rel"stylesheet" href="/public/css/bootstrap.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+
 <!--link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"-->
 </head>
 <body>
-{{>_navbars}}
+    {{>_navbars}}
 
-{{{body}}}
-<script src="node_modules/jquery/dist/jquery.js"></script>
-<script src="node_modules/popper.js/dist/popper.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    {{{body}}}
+
+    {{>_footer}}
+
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 </html>
