--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,12 +9,14 @@
 <!--link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"-->
 </head>
 <body>
+
+<div class="container">
     {{>_navbars}}
 
     {{{body}}}
 
     {{>_footer}}
-
+</div>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 </html>
