--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,12 @@
-teste
+<div class="conteiner">
+
+</div>
+<div class="conteiner kkkk">
+
+</div>
+<div class="conteiner rrr" >
+
+</div>
+<div class="conteiner">
+
+</div>
