reestruturar o projeto, rotas, footer

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/bower_components/Font-Awesome/css/all.css">
+<!--    <link rel="icon" href="/images/a.png">-->
 
 </head>
 <body>
 
 {{>_navbars}}
-
 
 {{{body}}}
 
