add body font and color

--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -27,12 +27,12 @@
             </div>
         </div>
         <div class="col-md">
-            <div class="row">
-                <div class="col-md"><a href="#">I</a></div>
-                <div class="col-md"><a href="#">F</a></div>
-                <div class="col-md"><a href="#">T</a></div>
+            <div class="row rsocial">
+                <div class="col-md"><a href="#"><i class="fab fa-instagram"></i></a></div>
+                <div class="col-md"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+                <div class="col-md"><a href="#"><i class="fab fa-twitter"></i></a></div>
             </div>
-            <div class="row">
+            <div class="row my-4">
                 <div class="col-md">
                     <a class="creditos" href="http://innovatmedia.com" target="_blank">&copy; iMedia Innovative Media 2019</a>
                 </div>
