--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -1,5 +1,5 @@
-<div class="container-fluid banner" style="background-color: red;">
-
+<div class="container-fluid p-0">
+    <img src="/images/banner.png" class="img-fluid banner" alt="Responsive image">
 </div>
 <div class="container-fluid " style="background-color: red;">
 dsfddfsf
