--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/bower_components/Font-Awesome/css/all.css">
+    <link rel="stylesheet" href="/bower_components/flag-icon-css/css/flag-icon.css">
 <!--    <link rel="icon" href="/images/a.png">-->
 
 </head>
