--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -1,35 +1,38 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">LOGO</a>
+    <div class="container">
+  <a class="navbar-brand h1 mb-0 font-weight-normal" style="color: #1FB0C1" href="#">LOGO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto mr-3">
       <li class="nav-item active">
-            <a class="nav-link" href="#">ABOUT US <span class="sr-only">(current)</span></a>
+            <a class="nav-link" style="color: #1FB0C1" href="#">SERVICES<span class="sr-only">(current)</span></a>
       </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">PLANS</a>
+            <a class="nav-link" style="color: #1FB0C1" href="#">PLANS</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">FAQ</a>
+            <a class="nav-link" style="color: #1FB0C1"  href="#">FAQ</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" style="color: #1FB0C1"  href="#"><i class="far fa-user"></i> LOGIN</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
+            <a class="nav-link dropdown-toggle" style="color: #1FB0C1" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="flag-icon flag-icon-gb-eng"></span>ENG
             </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" style="color: #1FB0C1" href="#"><span class="flag-icon flag-icon-pt"></span>POR</a>
+              <a class="dropdown-item" style="color: #1FB0C1" href="#"><span class="flag-icon flag-icon-fr"></span>FRA</a>
         </div>
       </li>
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-info my-2 my-sm-0" type="submit">ONLINE BOOKING</button>
     </form>
   </div>
+ </div>
 </nav>
