--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -2,12 +2,94 @@
 <div class="container-fluid p-0">
     <img src="/images/banner.png" class="img-fluid banner" alt="Responsive image">
 </div>
-<div class="container-fluid " style="background-color: red;">
-dsfddfsf
-</div>
-<div class="container-fluid " style="background-color: yellow;">
-sdfdsffsd
-</div>
+
+<section id="beneficio"  class="container-fluid">
+    <div class="row">
+        <div class="col-12 text-center mt-4">
+            <h1 class="display-4 font-weight-bold">BENEFITS</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md">
+                <div class="row text-center mt-4">
+                  <div class="col-12"><img src="./images/Beneficios 1.svg"></div>
+                </div>
+                <div class="row">
+                   <div class="col-12 mt-4"><h5 class="text-center" >BENEFICIOS DO SERVIÇO</h5></div>
+                </div>
+        </div>
+        <div class="col-md">
+                <div class="row text-center mt-4">
+                    <div class="col-12"><img src="./images/Beneficios 2.svg"></div>
+                </div>
+                <div class="row">
+                    <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
+                </div>
+        </div>
+        <div class="col-md">
+                <div class="row text-center mt-4">
+                    <div class="col-12"><img src="./images/Beneficios 3.svg"></div>
+                </div>
+                <div class="row">
+                    <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
+                </div>
+
+        </div>
+        <div class="col-md">
+                <div class="row text-center mt-4">
+                    <div class="col-12"><img src="./images/Beneficios 4.svg"></div>
+                </div>
+                <div class="row">
+                    <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
+                </div>
+        </div>
+    </div>
+</section>
+
+<section id="howwork"  class="container-fluid align-items-center">
+
+     <div class="row">
+         <div class="col-12 text-center mt-4">
+             <h1 class="display-3 font-weight-bold">HOW IT WORKS</h1>
+         </div>
+     </div>
+
+     <div class="row">
+         <div class="col-md">
+             <div class="row text-center mt-4">
+                 <div class="col-12"><img src="./images/Book Online.svg"></div>
+             </div>
+             <div class="row">
+                 <div class="col-12 mt-4"><h5 class="text-center" >Book Online</h5></div>
+             </div>
+         </div>
+         <div class="col-md">
+             <div class="row text-center mt-4">
+                 <div class="col-12"><img src="./images/Receive Package.svg"></div>
+             </div>
+             <div class="row">
+                 <div class="col-12 mt-4"><h5 class="text-center">Receive your Package</h5></div>
+             </div>
+         </div>
+         <div class="col-md">
+             <div class="row text-center mt-4">
+                 <div class="col-12"><img src="./images/Enjoy Internet Anywhere.svg"></div>
+             </div>
+             <div class="row">
+                 <div class="col-12 mt-4"><h5 class="text-center">Enjoy Internet Anywhere</h5></div>
+             </div>
+         </div>
+         <div class="col-md">
+             <div class="row text-center mt-4">
+                 <div class="col-12"><img src="./images/Return the Wifi Device.svg"></div>
+             </div>
+             <div class="row">
+                 <div class="col-12 mt-4"><h5 class="text-center">Return the Wifi Device</h5></div>
+             </div>
+         </div>
+     </div>
+
+</section>
 
 <div class="container-fluid " style="background-color: green;">
     sdfdsffsd
