--- a/views/home/servicos.handlebars
+++ b/views/home/servicos.handlebars
@@ -1,24 +1,99 @@
-<section class="container-fluid">
+<section class="container-fluid aboutBanner">
 
     <div class="row">
-        <div class="col-md-12">
-            <h1>Sobre Nos</h1>
+        <figure>
+            <img src="/images/about.png">
+        </figure>
+
+        <h1 class="sobre display-4 font-weight-bold">Sobre Nos</h1>
+    </div>
+
+</section>
+
+<section id="desc" class="container-fluid">
+    <div class="row text-justify justify-content-center">
+        <div class="col-md-8">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In placerat risus ex, a finibus ex posuere sit
+                amet. Quisque ut libero et nulla accumsan bibendum in eget nibh. Morbi efficitur sem eros, non
+                sagittis nisi lobortis quis. Suspendisse aliquam ut purus ut porttitor. Integer rutrum velit nec turpis
+                porta, nec aliquam lorem porttitor. Proin sed turpis a libero malesuada malesuada quis non nunc.
+                Phasellus non egestas ante, quis accumsan lorem. Curabitur urna ante, commodo vel luctus ut, auctor
+                eget nisl. Morbi vitae luctus turpis, a venenatis dui. Duis vel rhoncus tortor, suscipit tempus justo.
+            </p>
+        </div>
+    </div>
+</section>
+
+<section id="hiw" class="container-fluid">
+    <div class="row mar-bo">
+        <div class="col-md-12 text-center">
+            <h1 class="display-4 font-weight-bold">Como Funciona</h1>
         </div>
     </div>
 
-    <div class="row">
+    <div class="row mt-md-5">
+        <div class="col-md-3">
+            <div class="row">
+                <div class="col-md-12">
+                    <figure>
+                        <img src="/images/Book%20Online%20(Azul).svg">
+                    </figure>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="hiw">Book Online</h3>
+                </div>
+            </div>
+        </div>
 
-    </div>
+        <div class="col-md-3">
+            <div class="row">
+                <div class="col-md-12">
+                    <figure>
+                        <img src="/images/Receive%20Package%20(Azul).svg">
+                    </figure>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="hiw">Receive your<br>
+                        package</h3>
+                </div>
+            </div>
+        </div>
 
-    <div class="row">
+        <div class="col-md-3">
+            <div class="row">
+                <div class="col-md-12">
+                    <figure>
+                        <img src="/images/Enjoy%20Internet%20Anywhere%20(Azul).svg">
+                    </figure>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="hiw">Enjoy internet<br>
+                        anywhere</h3>
+                </div>
+            </div>
+        </div>
 
-    </div>
-
-    <div class="row">
-
-    </div>
-
-    <div class="row">
-
+        <div class="col-md-3">
+            <div class="row">
+                <div class="col-md-12">
+                    <figure>
+                        <img src="/images/Return%20Wifi%20Device%20(Azul).svg">
+                    </figure>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="hiw">Return the<br>
+                        Wifi device</h3>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
