index falatando ofertas

--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow">
     <div class="container">
-  <a class="navbar-brand h1 mb-0 font-weight-normal" style="color: #1FB0C1" href="#">LOGO</a>
+  <a class="navbar-brand h1 mb-0 font-weight-normal" style="color: #1FB0C1" href="/">LOGO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
