--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,97 @@
-/*******************div beneficios**********************/
+.logo{
+    top: 35%;
+    left: 42%;
+    color: white;
+    font-size: 6.25rem;
+    font-family: "Segoe UI";
+}
+.logo h1{
+    font-size: 6.25rem;
+}
+.logo a{
+    background-color: white;
+    color: #1FB0C1;
+    border: none;
+    padding: 1rem 3rem;
+    text-align: center;
+
+}
+/*#botbanner{
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: white;
+    color: #1FB0C1;
+    font-size: 2em;
+    padding: 0.75rem 1.5rem;
+    //height: 11%;
+    border: none;
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    text-align: center;
+}*!*/
+
+/*******************div beneficios***********************************/
 #beneficio img{
-    width: 134px;
-    height: 134px;
+    width: 8.375rem;
+    height: 8.375rem;
 }
 #beneficio{
-    //height: 488px;
-    padding: 2%;
+    padding: 5% 10% 10% 10%;
     color: #1FB0C1;
 }
-/*******************div howwork**********************/
+/*******************div howwork**************************************/
 #howwork{
-    padding: 2%;
-    height: 700px;
+    padding: 5% 10% 10% 10%;
     background-color: #1FB0C1;
     color: white;
 }
 #howwork img{
-    width: 187px;
-    height: 187px;
+    width: 11.6875rem;
+    height: 11.6875rem;
+}
+/*************************************div ofertas de pacotes*********/
+#offers{
+    padding: 2% 10% 10% 10%;
+    color: #1FB0C1;
+}
+.card{
+    -webkit-border-radius: 1.25rem;
+    -moz-border-radius: 1.25rem;
+    width: 15.625rem;
+    background-color: white;
+    box-shadow: 0.125rem 0.25rem 0.5rem grey;
+    border-radius: 1.25rem;
+
+}
+.card-header{
+    background-color: rgb(39,52,139);
+    background: -moz-linear-gradient(180deg, rgba(39,52,139,1) 0%, rgba(31,176,193,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(39,52,139,1) 0%, rgba(31,176,193,1) 100%);
+    background: linear-gradient(180deg, rgba(39,52,139,1) 0%, rgba(31,176,193,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#27348b",endColorstr="#1fb0c1",GradientType=1); ;
+
+
+}
+.card-header:first-child {
+    -webkit-border-radius: 1.25rem;
+    -moz-border-radius: 1.25rem;
+    border-radius: 1.25rem !important;
+    border-bottom-left-radius: 40%!important;
+    border-bottom-right-radius: 40%!important;
+}
+.card-header h2{
+    color: #FFFFFF;
+    text-align: center;
+}
+.card .btn-info{
+    height: 40px;
+    width: 220px;
+    border-radius: 15px;
+    background-color: #1FB0C1;
+    margin-top: 50px;
+   // margin-left: 8px;
+    border: none;
 }
