--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -1,6 +1,17 @@
 
-<div class="container-fluid p-0">
+<div class="container-fluid p-0" id="banner">
     <img src="/images/banner.png" class="img-fluid banner" alt="Responsive image">
+    <div class="row position-absolute logo">
+        <div class="col-12">
+            <div class="row">
+                <h1>LOGO</h1>
+            </div>
+            <div class="row">
+                <a href="#" class="btn btn-info btn-lg">ONLINE BOOKING</a>
+            </div>
+        </div>
+
+    </div>
 </div>
 
 <section id="beneficio"  class="container-fluid">
@@ -47,7 +58,7 @@
 </section>
 
 <section id="howwork"  class="container-fluid align-items-center">
-
+<div class="col align-self-center">
      <div class="row">
          <div class="col-12 text-center mt-4">
              <h1 class="display-3 font-weight-bold">HOW IT WORKS</h1>
@@ -88,18 +99,66 @@
              </div>
          </div>
      </div>
+</div>
+</section>
+
+<section id="offers" class="container-fluid text-center">
+            <div class="col-md-12 text-center mt-4">
+                <h1 class="display-3 font-weight-bold">TOP OFFERS</h1>
+            </div>
+
+    <div class="row mt-5">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header">
+                        <h2 class="card-title">PLAN NAME</h2>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
+                        <h1 class="card-text mt-5 font-weight-bold">000$</h1>
+                        <p class="card-text font-weight-bold">Data plan per day</p>
+                        <p class="card-text font-weight-bold">Number of devices</p>
+                        <p class="card-text font-weight-bold">Battery life</p>
+                        <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header rounded-top">
+                        <h2 class="card-title">PLAN NAME</h2>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
+                        <h1 class="card-text mt-5 font-weight-bold">000$</h1>
+                        <p class="card-text font-weight-bold">Data plan per day</p>
+                        <p class="card-text font-weight-bold">Number of devices</p>
+                        <p class="card-text font-weight-bold">Battery life</p>
+                        <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header rounded-top">
+                        <h2 class="card-title">PLAN NAME</h2>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
+                        <h1 class="card-text mt-5 font-weight-bold">000$</h1>
+                        <p class="card-text font-weight-bold">Data plan per day</p>
+                        <p class="card-text font-weight-bold">Number of devices</p>
+                        <p class="card-text font-weight-bold">Battery life</p>
+                        <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
+                    </div>
+                </div>
+            </div>
+     </div>
 
 </section>
 
-<div class="container-fluid " style="background-color: green;">
-    sdfdsffsd
-</div>
 
-<div class="container-fluid " style="background-color: black;">
-    sdfdsffsd
-</div>
-
-<div class="container-fluid " style="background-color: pink;">
-    sdfdsffsd
-</div>
 
