--- a/views/home/servicos.handlebars
+++ b/views/home/servicos.handlebars
@@ -97,3 +97,34 @@
         </div>
     </div>
 </section>
+
+<section id="AboutDevices" class="container-fluid">
+    <div class="row mar-bo">
+        <div class="col-md-12 text-center">
+            <h1 class="display-4 font-weight-bold">About The Devices</h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-1" style="background-color: yellow"></div>
+        <div class="col-md-2">
+            <div class="row">
+                <div class="col-md-12">
+                    <figure>
+                        <img src="/images/Camada%2044.png">
+                    </figure>
+                </div>
+            </div>
+<!--            <div class="row">-->
+                <div class="col-md-12">
+                    <ul class="droppanel">
+                        <li>sdqsdq</li>
+                        <li>dqsdqs</li>
+                        <li>qsdqs</li>
+                    </ul>
+                </div>
+<!--            </div>-->
+        </div>
+        <div class="col-md-1" style="background-color: yellow"></div>
+    </div>
+</section>
