--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -8,10 +8,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto mr-3">
       <li class="nav-item active">
-            <a class="nav-link" style="color: #1FB0C1" href="#">SERVICES<span class="sr-only">(current)</span></a>
+            <a class="nav-link" style="color: #1FB0C1" href="./servicos">SERVICES<span class="sr-only">(current)</span></a>
       </li>
         <li class="nav-item">
-            <a class="nav-link" style="color: #1FB0C1" href="#">PLANS</a>
+            <a class="nav-link" style="color: #1FB0C1" href="./planos">PLANS</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" style="color: #1FB0C1"  href="#">FAQ</a>
