--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -44,7 +44,6 @@
                 <div class="row">
                     <div class="col-12 mt-4"><h5 class="text-center">BENEFICIOS DO SERVIÇO</h5></div>
                 </div>
-
         </div>
         <div class="col-md">
                 <div class="row text-center mt-4">
@@ -103,61 +102,60 @@
 </section>
 
 <section id="offers" class="container-fluid text-center">
+    <div class="col align-self-center">
+        <div class="row">
             <div class="col-md-12 text-center mt-4">
                 <h1 class="display-3 font-weight-bold">TOP OFFERS</h1>
             </div>
-
-    <div class="row mt-5">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-header">
-                        <h2 class="card-title">PLAN NAME</h2>
+        </div>
+            <div class="row mt-5 ml-5">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-header">
+                                <h2 class="card-title">PLAN NAME</h2>
+                            </div>
+                            <div class="card-body">
+                                <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
+                                <h1 class="card-text mt-5 font-weight-bold">000$</h1>
+                                <p class="card-text font-weight-bold">Data plan per day</p>
+                                <p class="card-text font-weight-bold">Number of devices</p>
+                                <p class="card-text font-weight-bold">Battery life</p>
+                                <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
-                        <h1 class="card-text mt-5 font-weight-bold">000$</h1>
-                        <p class="card-text font-weight-bold">Data plan per day</p>
-                        <p class="card-text font-weight-bold">Number of devices</p>
-                        <p class="card-text font-weight-bold">Battery life</p>
-                        <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-header rounded-top">
+                                <h2 class="card-title">PLAN NAME</h2>
+                            </div>
+                            <div class="card-body">
+                                <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
+                                <h1 class="card-text mt-5 font-weight-bold">000$</h1>
+                                <p class="card-text font-weight-bold">Data plan per day</p>
+                                <p class="card-text font-weight-bold">Number of devices</p>
+                                <p class="card-text font-weight-bold">Battery life</p>
+                                <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-
-
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-header rounded-top">
-                        <h2 class="card-title">PLAN NAME</h2>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-header rounded-top">
+                                <h2 class="card-title">PLAN NAME</h2>
+                            </div>
+                            <div class="card-body">
+                                <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
+                                <h1 class="card-text mt-5 font-weight-bold">000$</h1>
+                                <p class="card-text font-weight-bold">Data plan per day</p>
+                                <p class="card-text font-weight-bold">Number of devices</p>
+                                <p class="card-text font-weight-bold">Battery life</p>
+                                <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
-                        <h1 class="card-text mt-5 font-weight-bold">000$</h1>
-                        <p class="card-text font-weight-bold">Data plan per day</p>
-                        <p class="card-text font-weight-bold">Number of devices</p>
-                        <p class="card-text font-weight-bold">Battery life</p>
-                        <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-header rounded-top">
-                        <h2 class="card-title">PLAN NAME</h2>
-                    </div>
-                    <div class="card-body">
-                        <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
-                        <h1 class="card-text mt-5 font-weight-bold">000$</h1>
-                        <p class="card-text font-weight-bold">Data plan per day</p>
-                        <p class="card-text font-weight-bold">Number of devices</p>
-                        <p class="card-text font-weight-bold">Battery life</p>
-                        <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
-                    </div>
-                </div>
-            </div>
-     </div>
-
+             </div>
+  </div>
 </section>
 
 
