--- a/views/home/planos.handlebars
+++ b/views/home/planos.handlebars
@@ -51,7 +51,7 @@
 
 <section id="offers" class="planos container-fluid text-center">
 
-    <div class="row mt-5">
+    <div class="row mt-5 ml-5">
         <div class="col-md-4">
             <div class="card">
                 <div class="card-header">
