--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -8,9 +8,10 @@
                 <div class="col-md-2 fmenu">MENU</div>
                 <div class="col-md-10">
                     <ul>
-                        <li><a href="#">Servicos</a></li>
-                        <li><a href="#">Plans</a></li>
+                        <li><a href="./servicos">Servicos</a></li>
+                        <li><a href="./planos">Plans</a></li>
                         <li><a href="#">Faq</a></li>
+                        <li><a href="./booking">Booking</a></li>
                         <li><a href="#">Login</a></li>
                     </ul>
                 </div>
