--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -31,7 +31,7 @@
 
     </ul>
     <form class="form-inline my-2 my-lg-0">
-            <button class="btn btn-info my-2 my-sm-0" type="submit">ONLINE BOOKING</button>
+            <a href="./booking" class="btn btn-info my-2 my-sm-0" >ONLINE BOOKING</a>
     </form>
   </div>
  </div>
