--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,7 +49,7 @@ body {
 /************ estilos do rodape *************************/
 
 footer {
-    padding: 2%;
+    padding: 3% 2% 2% 2%;
     background: rgb(39,52,139);
     background: -moz-linear-gradient(180deg, rgba(39,52,139,1) 0%, rgba(31,176,193,1) 100%);
     background: -webkit-linear-gradient(180deg, rgba(39,52,139,1) 0%, rgba(31,176,193,1) 100%);
@@ -175,14 +175,14 @@ a:hover {
     /*top: 80%;*/
     /* escondido*/
     top: 0;
-    left: 11%;
+    left: 6%;
     z-index: 1;
     text-align: center;
 
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
 
-    width: 70%;
+    width: 60%;
 }
 #AboutDevices .devicebox > *{
     color: black;
@@ -222,5 +222,85 @@ a:hover {
 #Bpolicy {
     background-color: gray;
     padding: 5%;
+}
+
+/*estilos para o stepers*/
+#booking .wrapper-progressBar {
+    width: 100%
+}
+
+#booking .progressBar {
+}
+
+#booking .progressBar li {
+    list-style-type: none;
+    float: left;
+    width: 33.33%;
+    position: relative;
+    text-align: center;
+    font-weight: bold;
+}
+
+#booking .progressBar li:before {
+    content: " ";
+    line-height: 15px;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    border: 1px solid #ddd;
+    display: block;
+    text-align: center;
+    margin: 0 auto 10px;
+    background-color: #ddd; /* cor das bolas*/
+    color: red;/*cor das linhas de conexao*/
+}
+
+#booking .progressBar li:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #ddd;
+    top: 6px;
+    left: -50%;
+    z-index: -1;
+}
+
+#booking .progressBar li:first-child:after {
+    content: none;
+}
+
+#booking .progressBar li.active {
+    color: white; /*cor das letras embaixo*/
+}
+
+#booking .progressBar li.active:before {
+    border-color: dodgerblue;
+    background-color: white; /* cor do fundo das bolinhas*/
+}
+
+#booking .progressBar li.active + li:after {
+    background-color: red;
+}
+#booking .card {
+    width: 100%;
+}
+
+#booking .linkTerms {
+    text-decoration: underline;
+}
+#booking .checkout {
+    padding: 2%;
+    /*background-color: indianred;*/
+    border: 2px solid white;
+    border-radius: 10px;
+    /*text-align: center;*/
+}
+#booking .planname {
+    /*text-align: left;*/
+}
+#booking .visa {
+    position: relative;
+    margin-top: 3%;
 }
 /*********** fim dos estilos do booking************************/
