--- a/views/booking/booking.handlebars
+++ b/views/booking/booking.handlebars
@@ -1,31 +1,199 @@
 <section id="booking" class="container-fluid mt-5">
-    <div class="row mar-bo">
+    <div class="row">
         <div class="col-md-12 text-center">
             <h1 class="display-4 font-weight-bold">BOOKING</h1>
         </div>
     </div>
 
 <!--    seccao para o steppers-->
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col-md-8">
-            ESTEPERS
+            <div class="wrapper-progressBar">
+                <ul class="progressBar">
+                    <li class="active">ORDER</li>
+                    <li class="active">BILING INFORMATION</li>
+                    <li>CONFIRME & CHECKOUT</li>
+                </ul>
+            </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-9">multi step formilarios</div>
+    <div class="row mt-5">
+        <div class="col-md-9">
+            <form>
+<!--                pormularios do steppe orders-->
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputNumber">Select the number of days for wifi</label>
+                        <select id="inputNumber" class="form-control">
+                            <option selected>Select</option>
+                            <option>5 dias</option>
+                            <option>10 dias</option>
+                            <option>20 dias</option>
+                            <option>30 dias</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputPickupdate">Pick-up date</label>
+                        <input type="date" class="form-control" id="inputPickupdate" placeholder="dd/mm/yyyy">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputLocation">confirm pick-up location</label>
+                        <select id="inputLocation" class="form-control">
+                            <option selected>Select</option>
+                            <option>Aeroporto Nelson Mandela (praia)</option>
+                            <option>TerraSystem (Latata)</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputreturnlocation">Confirm return location</label>
+                        <select id="inputNumber" class="form-control">
+                            <option selected>Select</option>
+                            <option>5 dias</option>
+                            <option>10 dias</option>
+                            <option>20 dias</option>
+                            <option>30 dias</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputFlightnumber">Flight Number (optional)</label>
+                        <input type="number" class="form-control" id="inputFlightnumber" placeholder="">
+                    </div>
+                </div>
+<!--                promularios do steppe biling information-->
+                <div class="form-row">
+                    <div class="form-group col-md-3">
+                        <label for="inputTitle">Title</label>
+                        <select id="inputTitle" class="form-control">
+                            <option selected>Mr.</option>
+                            <option>Ms.</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress2">Address 2</label>
+                    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress2">Address 2</label>
+                    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputZip">Zip code</label>
+                        <input type="text" class="form-control" id="inputZip" placeholder="">
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <label for="inputPhone">Phone</label>
+                        <input type="text" class="form-control" id="inputPhone" placeholder="">
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputCountry">Country</label>
+                        <select id="inputCountry" class="form-control">
+                            <option selected>EUA</option>
+                            <option>Portugal</option>
+                            <option>França</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <label for="inputEmail">Email</label>
+                        <input type="email" class="form-control" id="inputEmail" placeholder="">
+                    </div>
+                </div>
+
+<!--                promularios do steppe checkout-->
+                <div class="checkout">
+                    <div class="row">
+                        <div class="col-md-12 planname">
+                            <h1>PLAN NAME</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">Duration: 00 days</div>
+                        <div class="col-md-3">Ending: dd/mm/yyyy</div>
+                        <div class="col-md-3">Starting: dd/mm/yyyy</div>
+                        <div class="col-md-3"><b>0000$</b></div>
+                    </div>
+                </div>
+                <div class="terms">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4 class="font-weight-bold">Terms and Conditions</h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="inputTerms">
+                                <label class="form-check-label" for="inputTerms">
+                                    I agry to the <a class="linkTerms" href="#">terms and conditions</a>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <h1 class="display-4 font-weight-bold">TOTAL: 000$</h1>
+                        </div>
+                    </div>
+                </div>
+
+<!--                pagamento visa...-->
+
+                <div class="form-row">
+                    <div class="form-group col-md-7">
+                        <label for="inputCardnumber">Card Number</label>
+                        <input type="number" class="form-control" id="inputCardnumber" placeholder="">
+                    </div>
+
+                    <div class="col-md-2 visa">
+                        <img src="/images/mastercard.svg" width="40" height="40">
+                        <img src="/images/visa.svg" width="40" height="40">
+                    </div>
+
+                    <div class="form-group col-md-3">
+                        <label for="inputCardexpiry">card Expiry Date</label>
+                        <input type="date" class="form-control" id="inputCardexpiry" placeholder="">
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-9">
+                        <label for="inputCardHolder">Card Holder Name</label>
+                        <input type="text" class="form-control" id="inputCardholder" placeholder="">
+                    </div>
+
+                    <div class="form-group col-md-3">
+                        <label for="inputCVC">CVC</label>
+                        <input type="number" class="form-control" id="inputCVC" placeholder="">
+                    </div>
+                </div>
+
+                <button type="button" class="btn btn-primary">BACK</button>
+                <button type="submit" class="btn btn-primary">PROCCED TO PAYMENT</button>
+            </form>
+        </div>
         <div class="col-md-3">
-            <div class="summary">
-                <h1>Summary</h1>
-                <p>sdsqdqdsdqsqs
-                fdsfsdfdsfdsfds
-                    dsfds
-                    fdsf
-                    ds
-                    dsf
-                    ds
-                    ds
-                </p>
+            <div class="card">
+                <div class="card-body">
+                    This is some text within a card body.
+                </div>
             </div>
         </div>
     </div>
