--- a/views/home/servicos.handlebars
+++ b/views/home/servicos.handlebars
@@ -118,7 +118,7 @@
                         <li>terrasystem</li>
                         <li>terrasystem</li>
                     </ul>
-                    <span><i class="fa fa-arrow-alt-circle-down"></i></span>
+                    <span><i class="fas fa-chevron-down"></i></span>
                 </div>
             </div>
 
@@ -133,7 +133,7 @@
                         <li>terrasystem</li>
                         <li>terrasystem</li>
                     </ul>
-                    <span><i class="fa fa-arrow-alt-circle-down"></i></span>
+                    <span><i class="fas fa-chevron-down"></i></span>
                 </div>
             </div>
 
@@ -148,7 +148,7 @@
                         <li>terrasystem</li>
                         <li>terrasystem</li>
                     </ul>
-                    <span><i class="fa fa-arrow-alt-circle-down"></i></span>
+                    <span><i class="fas fa-chevron-down"></i></span>
                 </div>
             </div>
 
@@ -163,7 +163,7 @@
                         <li>terrasystem</li>
                         <li>terrasystem</li>
                     </ul>
-                    <span><i class="fa fa-arrow-alt-circle-down"></i></span>
+                    <span><i class="fas fa-chevron-down"></i></span>
                 </div>
             </div>
 
@@ -178,7 +178,7 @@
                         <li>terrasystem</li>
                         <li>terrasystem</li>
                     </ul>
-                    <span><i class="fa fa-arrow-alt-circle-down"></i></span>
+                    <span><i class="fas fa-chevron-down"></i></span>
                 </div>
             </div>
         </div>
