--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/style.css">
+
     <link rel="stylesheet" href="/bower_components/Font-Awesome/css/all.css">
     <link rel="stylesheet" href="/bower_components/flag-icon-css/css/flag-icon.css">
-<!--    <link rel="icon" href="/images/a.png">-->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico">
+<!--    <link rel="icon" href="/a.png">-->
 
 </head>
 <body>
@@ -23,5 +26,6 @@
 
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/css/site.js"></script>
 </body>
 </html>
