--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -14,10 +14,10 @@
             <a class="nav-link" style="color: #1FB0C1" href="./planos">PLANS</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" style="color: #1FB0C1"  href="#">FAQ</a>
+            <a class="nav-link" style="color: #1FB0C1"  href="./faq">FAQ</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" style="color: #1FB0C1"  href="#"><i class="far fa-user"></i> LOGIN</a>
+            <a class="login nav-link" style="color: #1FB0C1"  data-toggle="modal" data-target="#login"><i class="far fa-user"></i> LOGIN</a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" style="color: #1FB0C1" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
