--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -101,14 +101,63 @@
 </div>
 </section>
 
-<section id="offers" class="container-fluid text-center">
-    <div class="col align-self-center">
+<section id="offers" class="container-fluid">
+    <div class="row text-center">
+        <div class="col-md-12">
+            <h1 class="display-3 font-weight-bold">TOP OFFERS</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col d-flex justify-content-center coluna">
+            <div class="pacote text-center">
+                <h5 class="card-header planocabeca">PLAN NAME</h5>
+                <div class="card-body">
+                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
+                    <h1 class="card-text  font-weight-bold">000$</h1>
+                    <p class="card-text font-weight-bold">Data plan per day</p>
+                    <p class="card-text font-weight-bold">Number of devices</p>
+                    <p class="card-text font-weight-bold">Battery life</p>
+                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
+                </div>
+            </div>
+        </div>
+        <div class="col d-flex justify-content-center coluna">
+            <div class="pacote text-center">
+                <h5 class="card-header planocabeca">PLAN NAME</h5>
+                <div class="card-body">
+                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
+                    <h1 class="card-text font-weight-bold">000$</h1>
+                    <p class="card-text font-weight-bold">Data plan per day</p>
+                    <p class="card-text font-weight-bold">Number of devices</p>
+                    <p class="card-text font-weight-bold">Battery life</p>
+                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
+                </div>
+            </div>
+        </div>
+        <div class="col d-flex justify-content-center coluna">
+            <div class="pacote text-center">
+                <h5 class="card-header planocabeca">PLAN NAME</h5>
+                <div class="card-body">
+                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
+                    <h1 class="card-text font-weight-bold">000$</h1>
+                    <p class="card-text font-weight-bold">Data plan per day</p>
+                    <p class="card-text font-weight-bold">Number of devices</p>
+                    <p class="card-text font-weight-bold">Battery life</p>
+                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--<div class="col align-self-center">
         <div class="row">
             <div class="col-md-12 text-center mt-4">
                 <h1 class="display-3 font-weight-bold">TOP OFFERS</h1>
             </div>
         </div>
-            <div class="row mt-5 ml-5">
+            <div class="row">
                     <div class="col-md-4">
                         <div class="card">
                             <div class="card-header">
@@ -155,7 +204,7 @@
                         </div>
                     </div>
              </div>
-  </div>
+  </div>-->
 </section>
 
 
