--- a/views/home/planos.handlebars
+++ b/views/home/planos.handlebars
@@ -51,52 +51,46 @@
 
 <section id="offers" class="planos container-fluid text-center">
 
-    <div class="row mt-5 ml-5">
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="card-title">PLAN NAME</h2>
-                </div>
+    <div class="row">
+        <div class="col d-flex justify-content-center coluna">
+            <div class="pacote text-center">
+                <h5 class="card-header planocabeca">PLAN NAME</h5>
                 <div class="card-body">
-                    <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
-                    <h1 class="card-text mt-5 font-weight-bold">000$</h1>
+                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
+                    <h1 class="card-text  font-weight-bold">000$</h1>
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
                 </div>
             </div>
         </div>
-
-
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-header rounded-top">
-                    <h2 class="card-title">PLAN NAME</h2>
-                </div>
+        <div class="col d-flex justify-content-center coluna">
+            <div class="pacote text-center">
+                <h5 class="card-header planocabeca">PLAN NAME</h5>
                 <div class="card-body">
-                    <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
-                    <h1 class="card-text mt-5 font-weight-bold">000$</h1>
+                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
+                    <h1 class="card-text font-weight-bold">000$</h1>
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
                 </div>
             </div>
         </div>
-
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-header rounded-top">
-                    <h2 class="card-title">PLAN NAME</h2>
-                </div>
+        <div class="col d-flex justify-content-center coluna">
+            <div class="pacote text-center">
+                <h5 class="card-header planocabeca">PLAN NAME</h5>
                 <div class="card-body">
-                    <h6 class="card-text mt-5 text-center">equipment image with transparency</h6>
-                    <h1 class="card-text mt-5 font-weight-bold">000$</h1>
+                    <img class="card-img mt-0" src="./images/Router.jpg" alt="Card image">
+                    <!--<h6 class="card-text mt-5">equipment image with transparency</h6>-->
+                    <h1 class="card-text font-weight-bold">000$</h1>
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="./booking" class="btn btn-info">ONLINE BOOKING</a>
+                    <a href="#" class="btn btn-primary">ONLINE BOOKING</a>
                 </div>
             </div>
         </div>
