--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/style.css">
-
+    <link rel="stylesheet" href="/css/media.css">
     <link rel="stylesheet" href="/bower_components/Font-Awesome/css/all.css">
     <link rel="stylesheet" href="/bower_components/flag-icon-css/css/flag-icon.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -26,6 +26,6 @@
 
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="/css/site.js"></script>
+    <script src="/js/site.js"></script>
 </body>
 </html>
