--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -29,7 +29,7 @@
         </div>
         <div class="col-md">
             <div class="row text-center mt-4">
-                <div class="col-12"><img src="./images/USAGE.svg"></div>
+                <div class="col-12"><img src="./images/Usage.svg"></div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >USAGE</h6></div>
