--- a/views/booking/booking.handlebars
+++ b/views/booking/booking.handlebars
@@ -425,7 +425,7 @@
                     <table class="able">
                         <thead class="thead-deault">
                         <tr>
-                            <th><h1>SUMARY</h1></th>
+                            <th><h1 class="font-weight-bold">SUMARY</h1></th>
                         </tr>
                         </thead>
                         <tbody>
