--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -18,18 +18,18 @@
             <div class="row text-center mt-4">
                 <div class="col-12">
                     <a class="general" href="#">
-                        <img src="./images/General.svg">
+                        <img class="ativo" src="./images/General.svg">
                     </a>
 
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >GENERAL</h6></div>
+                <div class="col-12 mt-4"><h6 class="text-center font-weight-bold ativo" >GENERAL</h6></div>
             </div>
         </div>
         <div class="col-md">
             <div class="row text-center mt-4">
-                <div class="col-12"><img src="./images/Usage.svg"></div>
+                <div class="col-12"><img class="" src="./images/Usage.svg"></div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >USAGE</h6></div>
@@ -37,7 +37,7 @@
         </div>
         <div class="col-md">
             <div class="row text-center mt-4">
-                <div class="col-12"><img src="./images/Booking%20and%20Payment.svg"></div>
+                <div class="col-12"><img class="" src="./images/Booking%20and%20Payment.svg"></div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold" >BOOKING AND PAYMENT</h6></div>
@@ -45,7 +45,7 @@
         </div>
         <div class="col-md">
             <div class="row text-center mt-4">
-                <div class="col-12"><img src="./images/Pickup%20or%20shipping.svg"></div>
+                <div class="col-12"><img class="" src="./images/Pickup%20or%20shipping.svg"></div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">PICKUP OR SHIPPING</h6></div>
@@ -53,7 +53,7 @@
         </div>
         <div class="col-md">
             <div class="row text-center mt-4">
-                <div class="col-12"><img src="./images/Return.svg"></div>
+                <div class="col-12"><img class="" src="./images/Return.svg"></div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">RETURN</h6></div>
@@ -62,7 +62,7 @@
         </div>
         <div class="col-md">
             <div class="row text-center mt-4">
-                <div class="col-12"><img src="./images/Modification%20and%20Cancellation.svg"></div>
+                <div class="col-12"><img class="" src="./images/Modification%20and%20Cancellation.svg"></div>
             </div>
             <div class="row">
                 <div class="col-12 mt-4"><h6 class="text-center font-weight-bold">MODIFICATION AND CANCELLATION</h6></div>
