add navbar padding 1%, remove inline styles & put in main.css

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -315,3 +315,14 @@ a:hover {
     color: #1FB0C1;
 }
 /*********** fim dos estilos do booking************************/
+/*********** estilos para menu (navbar) **********************/
+#menu {
+    padding: 1%;
+}
+
+#menu a {
+    color: #1FB0C1;
+}
+#menu form a {
+    color: white;
+}
