--- a/views/partials/_navbars.handlebars
+++ b/views/partials/_navbars.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow">
+<nav id="menu" class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow">
     <div class="container">
   <a class="navbar-brand h1 mb-0 font-weight-normal" style="color: #1FB0C1" href="/">LOGO</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,26 +6,27 @@
     </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto mr-3">
+<!--      navbar-nav ml-auto mr-3-->
+    <ul class="navbar-nav ml-auto mr-4">
       <li class="nav-item active">
-            <a class="nav-link" style="color: #1FB0C1" href="./servicos">SERVICES<span class="sr-only">(current)</span></a>
+            <a class="nav-link"  href="./servicos">SERVICES<span class="sr-only">(current)</span></a>
       </li>
         <li class="nav-item">
-            <a class="nav-link" style="color: #1FB0C1" href="./planos">PLANS</a>
+            <a class="nav-link"  href="./planos">PLANS</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" style="color: #1FB0C1"  href="./faq">FAQ</a>
+            <a class="nav-link"   href="./faq">FAQ</a>
         </li>
         <li class="nav-item">
-            <a class="login nav-link" style="color: #1FB0C1"  data-toggle="modal" data-target="#login"><i class="far fa-user"></i> LOGIN</a>
+            <a class="login nav-link"   data-toggle="modal" data-target="#login"><i class="far fa-user"></i> LOGIN</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" style="color: #1FB0C1" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="flag-icon flag-icon-gb-eng"></span>ENG
+            <a class="nav-link dropdown-toggle"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="flag-icon flag-icon-gb-eng"></span> ENG
             </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" style="color: #1FB0C1" href="#"><span class="flag-icon flag-icon-pt"></span>POR</a>
-              <a class="dropdown-item" style="color: #1FB0C1" href="#"><span class="flag-icon flag-icon-fr"></span>FRA</a>
+              <a class="dropdown-item"  href="#"><span class="flag-icon flag-icon-pt"></span> POR</a>
+              <a class="dropdown-item"  href="#"><span class="flag-icon flag-icon-fr"></span> FRA</a>
         </div>
       </li>
 
