--- a/views/home/servicos.handlebars
+++ b/views/home/servicos.handlebars
@@ -2,13 +2,19 @@
 
     <div class="row">
         <figure>
-            <img src="/images/about.png">
+            <img src="/images/about.png" class="img-fluid">
         </figure>
 
-        <h1 class="sobre display-4 font-weight-bold">Sobre Nos</h1>
+        <h1 class="sobre display-4 font-weight-bold">S<span>ob</span>re <span>Nos</span></h1>
     </div>
 
 </section>
+
+<!--<section class="container-fluid aboutBanner">-->
+<!--    <div class="row">-->
+<!--        <div class="col-md-12">About us</div>-->
+<!--    </div>-->
+<!--</section>-->
 
 <section id="desc" class="container-fluid">
     <div class="row text-justify justify-content-center">
